Add : main bgcolor

--- a/front/app/nuxt3weblog/assets/css/main.css
+++ b/front/app/nuxt3weblog/assets/css/main.css
@@ -2,6 +2,7 @@
   font-family: 'Open Sans','Rounded Mplus 1c', Segoe UI, "メイリオ", Meiryo, sans-serif;
   font-weight: 100;
   color: #737373 !important;
+  background-color: #F9F9F9 !important;
 }
 
 .textarea{
