--- a/front/app/nuxt3weblog/assets/css/main.css
+++ b/front/app/nuxt3weblog/assets/css/main.css
@@ -122,3 +122,14 @@ h3{
 .v-breadcrumbs{
   margin: 30px 0px 10px 0px !important;
 }
+
+.about{
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  display: block;
+  font-size:100%;
+  line-height: 180%;
+}
