--- a/front/app/nuxt3weblog/assets/css/main.css
+++ b/front/app/nuxt3weblog/assets/css/main.css
@@ -108,10 +108,15 @@ h3{
   max-width: 1200px;
   overflow: auto;
 
-  padding: 0.3rem 0.8rem;
+  padding: 0.6rem 0.8rem;
   margin:0 auto;
   margin-top:15px;
   margin-bottom: 15px;
+}
+.post code{
+  font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
+  font-size: 90%;
+  color: #444444;
 }
 
 .post table{
