--- a/front/app/nuxt3weblog/assets/css/main.css
+++ b/front/app/nuxt3weblog/assets/css/main.css
@@ -130,7 +130,7 @@ h3{
 .post th{
   padding: 0px 15px;
   border: solid 1px #737373;
-  background-color: #dcdcdc;
+  background-color: #e9e9e9;
 }
 .post th p{
   margin: 5px 0px;
